# tenebrae_0

./: AUTHORS  Makefile.am  WinQuake.dsp  WinQuake.opt  WinQuake.plg  anorm_dots.h  bspfile.h  cd_win.c  chase.c  cl_demo.c  cl_main.c  cl_parse.c  client.h  cmd.c  cmd.h  common.c  common.h  configure.ac  conproc.c  console.c  cvar.c  draw.h  gl_aliasinstant.c  gl_arbprograms.h  gl_brushinstant.c  gl_bumparb.c  gl_bumpdriver.c  gl_bumpgf.c  gl_bumpgl2.c  gl_bumpmap.c  gl_bumpnv3x.c  gl_bumpparhelia.c  gl_bumpradeon.c  gl_common.c  gl_decals.c  gl_draw.c  gl_glare.c  gl_md3.c  gl_md3.h  gl_mesh.c  (+64 more)
extlibs-w32/: zconf.h
glprogs/: blur_fp.txt  blur_vp.txt  downsample_fp.txt  downsample_vp.txt  final_fp.txt  final_vp.txt  light_fp_1.txt  light_fp_2.txt  light_vp_1.txt  light_vp_2.txt  ppsprite_fp.txt  ppsprite_vp.txt
glsl/: bump.frag  bump.vert  bump2.frag  bump2.vert
linux/: Makefile.i386linux  README  dumpdebug.sh
macosx/: sys_osx.m
macosx/English.lproj/TenebraeQuake.nib/: objects.nib
macosx/English.lproj/TenebraeQuake~.nib/: objects.nib
sdl/: Makefile.am  autogen.sh  configure.ac
win/: WinQuake.dsp  WinQuake.sln  WinQuake.sln.old  WinQuake.vcproj  WinQuake.vcproj.old
